@@ -131,8 +131,8 @@ LABEL: pg_basebackup base backup
         assert "pgdata/global/sub2.test" not in arcnameset  # acceptable loss
         assert "pgdata/global/sub3.test" in arcnameset  # acceptable
 
-        # Add final entries (ie pg_control)
-        pgb.write_final_entries_to_tar(pgdata=db.pgdata, tar=faketar)
+        # Add pg_control
+        pgb.write_pg_control_to_tar(pgdata=db.pgdata, tar=faketar)
         arcnameset = set(item[1] for item in faketar.items)
         assert len(arcnameset) == len(faketar.items)
         expected_items = (bunameset | {"pgdata/global/pg_control"}) - {"pgdata/global/sub2.test"}
@@ -196,7 +196,14 @@ LABEL: pg_basebackup base backup
     def test_basebackups_basic(self, capsys, db, pghoard, tmpdir):
         self._test_basebackups(capsys, db, pghoard, tmpdir, "basic")
 
-    def test_basebackups_local_tar(self, capsys, db, pghoard, tmpdir):
+    def test_basebackups_local_tar_nonexclusive(self, capsys, db, pghoard, tmpdir):
+        if db.pgver < "9.6":
+            pytest.skip("PostgreSQL 9.6+ required for non-exclusive backups")
+        self._test_basebackups(capsys, db, pghoard, tmpdir, "local-tar")
+
+    def test_basebackups_local_tar_legacy(self, capsys, db, pghoard, tmpdir):
+        if db.pgver >= "9.6":
+            pytest.skip("PostgreSQL < 9.6 required for exclusive backup tests")
         self._test_basebackups(capsys, db, pghoard, tmpdir, "local-tar")
 
     def test_basebackups_pipe(self, capsys, db, pghoard, tmpdir):
